--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="calculadora">
       <!-- El readonly significa solo lectura es decir el usuario no lo puede modificar -->
       <input type="text" id="pantalla" readonly />
-      <input class="boton" type="button" value="C" onclick="borrar()" />
+      <input class="boton" type="button" value="C" onclick="limpiar()" />
       <input class="boton" type="button" value="" />
-      <input class="boton" type="button" value="" />
+      <input class="boton" type="button" value="Del" onclick="borrar()" />
       <input class="boton" type="button" value="/" onclick="agregar('/')" />
       <input class="boton" type="button" value="7" onclick="agregar('7')" />
       <input class="boton" type="button" value="8" onclick="agregar('8')" />
